Add support to WebP caching (#463)
* Add support to WebP caching

Add support to WebP caching even in case of query string

* feat: add cache.cachealways configuration property